implemented query batching